Preferences: About me field editor z-index fix.

--- a/apps/Preferences/index.scss
+++ b/apps/Preferences/index.scss
@@ -576,6 +576,7 @@
   .k-toolbar {
     top: 0px;
     position: sticky;
+    z-index: 1;
   }
 
   .colorPicker {
